@@ -3899,7 +3899,7 @@
     },
     {
       "name": "SetShaderValueTexture",
-      "description": "Set shader uniform value for texture (sampler2d)",
+      "description": "Set shader uniform value and bind the texture (sampler2d)",
       "returnType": "void",
       "params": [
         {
