@@ -10,7 +10,7 @@
 @echo off
 setlocal enabledelayedexpansion
 set CMAKE_EXE=%1
-if %CMAKE_EXE% == "" (
+if "%CMAKE_EXE%"=="" (
     set CMAKE_EXE="%PROGRAMFILES%\CMake\bin\cmake"
 )
 
